Simple debug render.

--- a/index.html
+++ b/index.html
@@ -23,5 +23,6 @@
             <h2>This is a live JavaScript multiplayer game</h2>
         </div>
         <div id="phaser-app" style="margin: 0px;padding: 0px;" class=""></div>
+        <div id="matter-app" style="margin: 0px;padding: 0px;position: fixed;left:0px;top:0px;" class=""></div>
     </body>
 </html>
