--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="assets/css/main.css">
     </head>
     <body style="margin: 0px;">
-        <div id="guiContainer">
+        <div id="guiContainer" style="display: block;">
             <button id="joinGame">Join Game</button>
             <button id="tryAgain" disabled>Try again</button>
             <button id="reconnect" disabled>Reconnect</button>
@@ -23,6 +23,9 @@
             <h2>This is a live JavaScript multiplayer game</h2>
         </div>
         <div id="phaser-app" style="margin: 0px;padding: 0px;" class=""></div>
+        <!--
+        <button onclick="JoinTest();"> Spawn </button>
+        -->
         <div id="matter-app" style="margin: 0px;padding: 0px;position: fixed;left:0px;top:0px;" class=""></div>
     </body>
 </html>
