Added debug test.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
             <div class="hud">
                 <div>Latency: <span class="latencyData">N/A</span></div>
                 <div>Latency (avg): <span class="averageLatencyData">N/A</span></div>
+                <div id="shippos">Pos x: 0 y: 0</div>
+                <div id="shipvec">Vec x: 0 y: 0</div>
+                <div id="shipangle">Angle: 0</div>
+
+                <div id="pshippos">Pos x: 0 y: 0</div>
+                <div id="pshipvec">Vec x: 0 y: 0</div>
+                <div id="pshipangle">Angle: 0</div>
             </div>
             <div class="score"></div>
             <div id="offscreenIndicatorContainer"></div>
